// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to custom the className of action 1`] = `
<div role="menuitem" class="ghb-popover__action foo">
  <div class="ghb-popover__action-text ghb-hairline--bottom">Option</div>
</div>
`;

exports[`should locate to reference element when showed 1`] = `<!---->`;

exports[`should locate to reference element when showed 2`] = `
<div class="ghb-popup ghb-popover ghb-popover--light" name="ghb-popover-zoom" style="position: absolute; left: 0px; top: 8px; margin: 0px; z-index: 2007;" data-popper-placement="bottom">
  <div class="ghb-popover__arrow"></div>
  <div role="menu" class="ghb-popover__content"></div>
</div>
`;

exports[`should locate to reference element when showed 3`] = `
<div class="ghb-popup ghb-popover ghb-popover--light" name="ghb-popover-zoom" style="position: absolute; left: 0px; top: 8px; margin: 0px; z-index: 2007; display: none;" data-popper-placement="bottom">
  <div class="ghb-popover__arrow"></div>
  <div role="menu" class="ghb-popover__content"></div>
</div>
`;

exports[`should watch placement prop and update location 1`] = `
<div class="ghb-popup ghb-popover ghb-popover--light" name="ghb-popover-zoom" style="z-index: 2008; position: absolute; left: 0px; top: -8px; margin: 0px;" data-popper-placement="top">
  <div class="ghb-popover__arrow"></div>
  <div role="menu" class="ghb-popover__content"></div>
</div>
`;
